# rag-on-media-content-with-bedrock-and-transcribe

./: .gitignore  Makefile  README.md
infra/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
infra/modules/media-rag/: api-gateway.tf  create-media-upload-link-api-integration.tf  create-media-upload-link.tf  data.tf  handle-successful-transcription-lambda.tf  kb-bucket.tf  knowlege-base.tf  media-bucket-notification.tf  media-bucket.tf  pinecone-index.tf  pinecone-secret.tf  providers.tf  query-knowledge-base-api-integration.tf  query-knowledge-base.tf  random-pet.tf  start-transcription-job-lambda.tf  transcription-event-handling.tf  variables.tf
src/: Cargo.toml
src/create-media-upload-link/: Cargo.toml
src/create-media-upload-link/src/: main.rs
src/handle-successful-transcription/: Cargo.toml
src/handle-successful-transcription/src/: main.rs  transcription_result.rs  transcription_success_event.rs
src/query-knowledge-base/: Cargo.toml
src/query-knowledge-base/src/: main.rs  query.rs
src/shared/: Cargo.toml
src/shared/src/: models.rs
src/start-transcription-job/: Cargo.toml
src/start-transcription-job/src/: main.rs
