[package]
name = "query-knowledge-base"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.13.0"
aws-sdk-bedrockagentruntime = "1.40.0"
aws-config = "1.5.4"
serde = "1.0.204"
serde_valid = "0.24.0"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
shared = { path = "../shared" }


