[package]
name = "start-transcription-job"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["s3"] }
aws-sdk-transcribe = "1.37.0"
aws-config = "1.5.4"
nanoid = "0.4.0"


lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = "0.3.18"

